// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders default 1`] = `
<div
  className="Comments"
/>
`;

exports[`Comments renders listing one 1`] = `
<div
  className="Comments"
>
  <Comment
    id="foo"
    key="foo"
  />
</div>
`;

exports[`Comments renders listing two 1`] = `
<div
  className="Comments"
>
  <Comment
    id="foo"
    key="foo"
  />
  <Comment
    id="bar"
    key="bar"
  />
</div>
`;
